2006-03-11  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/tree/TreeCellEditor.java: Added API docs,
	* javax/swing/tree/TreeCellRenderer.java: Likewise.

2006-03-10  Casey Marshall  <csm@gnu.org>

	Fixes PR 23768.
	* javax/crypto/Cipher.java (doFinal, doFinal, doFinal): don't
	reset `state.'
	(doFinal, update): new methods.
	(init, init, init, init): initialize `state' after trying the
	implementation, which can throw an exception.
	* javax/crypto/CipherSpi.java (engineDoFinal, engineUpdate): new
	methods.

2006-03-11  Ito Kazumitsu  <kaz@maczuka.gcd.org>

	* gnu/regexp/BacktrackStack.java: New file.
	* gnu/regexp/RE.java(findMatch): New method.
	* gnu/regexp/REMatch.java(next,matchFlags,MF_FIND_ALL,
	REMatchList): Removed. (backtrackStack): New field.
	* gnu/regexp/REToken.java(match): Changed from an abstract
	method to an ordinary method defined with the new method
	matchThis. (matchThis, getNext, findMatch, returnsFixedLengthMatches,
	findFixedLengthMatches, backtrack, toString): New methods.
	* gnu/regexp/RETokenAny.java: Inplemented new methods of REToken.
	* gnu/regexp/RETokenBackRef.java: Likewise.
	* gnu/regexp/RETokenChar.java: Likewise.
	* gnu/regexp/RETokenEnd.java: Likewise.
	* gnu/regexp/RETokenEndSub.java: Likewise.
	* gnu/regexp/RETokenIndependent.java: Likewise.
	* gnu/regexp/RETokenLookAhead.java: Likewise.
	* gnu/regexp/RETokenLookBehind.java: Likewise.
	* gnu/regexp/RETokenNamedProperty.java: Likewise.
	* gnu/regexp/RETokenPOSIX.java: Likewise.
	* gnu/regexp/RETokenRange.java: Likewise.
	* gnu/regexp/RETokenStart.java: Likewise.
	* gnu/regexp/RETokenWordBoundary.java: Likewise
	* gnu/regexp/RETokenOneOf.java: Rewriten.
	* gnu/regexp/RETokenRepeated.java: Rewriten.

2006-03-10  Roman Kennke  <kennke@aicas.com>

	* javax/swing/plaf/metal/MetalBorders.java
	(RolloverButtonBorder.paintBorder): Only call super here.
	* javax/swing/plaf/metal/MetalButtonListener.java
	(propertyChange): Only call super here.